// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Login > Mnemonic phrase workflow > should render the login page with a mnemonic phrase field 1`] = `
<div>
  <section
    class="landing-content s-diEOsynXV9Ac"
  >
    <h2
      class="h1 s-diEOsynXV9Ac"
    >
      Unlocking the Future: 
      <br
        class="s-diEOsynXV9Ac"
      />
      
    Your 
      <mark
        class="s-diEOsynXV9Ac"
      >
        DUSK
      </mark>
       Native Wallet
    </h2>
     
    <div
      class="landing-content__options s-diEOsynXV9Ac"
    >
      <form
        class="s-diEOsynXV9Ac"
      >
        <div
          class="dusk-field-button-group"
        >
          <input
            autocomplete="current-password"
            class="dusk-textbox dusk-textbox-password"
            name="secret"
            placeholder="Mnemonic phrase"
            required=""
            tabindex="0"
            type="password"
          />
          
          <!--&lt;Textbox&gt;-->
           
          <button
            class="dusk-button dusk-button--type--submit dusk-button--variant--secondary dusk-button--size--normal"
            type="submit"
          >
            <span
              class="dusk-button__text"
            >
              Unlock
            </span>
          </button>
          <!--&lt;Button&gt;-->
        </div>
        <!--&lt;FieldButtonGroup&gt;-->
         
      </form>
       
      <div
        class="landing-content__options-group s-diEOsynXV9Ac"
      >
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--normal dusk-icon-button-labeled"
          href="/some-base-path/setup/create"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <span
            class="dusk-anchor-button__text"
          >
            New
          </span>
          
          
        </a>
        <!--&lt;Anchor&gt;-->
        <!--&lt;AnchorButton&gt;-->
        <!--&lt;AppAnchorButton&gt;-->
         
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--normal dusk-icon-button-labeled"
          href="/some-base-path/setup/restore"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M13,3A9,9 0 0,0 4,12H1L4.89,15.89L4.96,16.03L9,12H6A7,7 0 0,1 13,5A7,7 0 0,1 20,12A7,7 0 0,1 13,19C11.07,19 9.32,18.21 8.06,16.94L6.64,18.36C8.27,20 10.5,21 13,21A9,9 0 0,0 22,12A9,9 0 0,0 13,3Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <span
            class="dusk-anchor-button__text"
          >
            Restore
          </span>
          
          
        </a>
        <!--&lt;Anchor&gt;-->
        <!--&lt;AnchorButton&gt;-->
        <!--&lt;AppAnchorButton&gt;-->
      </div>
    </div>
  </section>
   
  <footer
    class="landing-footer s-diEOsynXV9Ac"
  >
    <span
      class="s-diEOsynXV9Ac"
    >
      Web Wallet v
      0.1.5
       (
      hash1234 2024-01-12
      )
    </span>
  </footer>
  <!--&lt;+page&gt;-->
</div>
`;

exports[`Login > Password workflow > should render the login page with a password field 1`] = `
<div>
  <section
    class="landing-content s-diEOsynXV9Ac"
  >
    <h2
      class="h1 s-diEOsynXV9Ac"
    >
      Unlocking the Future: 
      <br
        class="s-diEOsynXV9Ac"
      />
      
    Your 
      <mark
        class="s-diEOsynXV9Ac"
      >
        DUSK
      </mark>
       Native Wallet
    </h2>
     
    <div
      class="landing-content__options s-diEOsynXV9Ac"
    >
      <form
        class="s-diEOsynXV9Ac"
      >
        <div
          class="dusk-field-button-group"
        >
          <input
            autocomplete="current-password"
            class="dusk-textbox dusk-textbox-password"
            name="secret"
            placeholder="Password"
            required=""
            tabindex="0"
            type="password"
          />
          
          <!--&lt;Textbox&gt;-->
           
          <button
            class="dusk-button dusk-button--type--submit dusk-button--variant--secondary dusk-button--size--normal"
            type="submit"
          >
            <span
              class="dusk-button__text"
            >
              Unlock
            </span>
          </button>
          <!--&lt;Button&gt;-->
        </div>
        <!--&lt;FieldButtonGroup&gt;-->
         
      </form>
       
      <div
        class="landing-content__options-group s-diEOsynXV9Ac"
      >
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor-button dusk-anchor-button--variant--primary dusk-anchor-button--size--normal dusk-icon-button-labeled"
          href="/some-base-path/setup/create"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <span
            class="dusk-anchor-button__text"
          >
            New
          </span>
          
          
        </a>
        <!--&lt;Anchor&gt;-->
        <!--&lt;AnchorButton&gt;-->
        <!--&lt;AppAnchorButton&gt;-->
         
        <a
          aria-disabled="false"
          class="dusk-anchor dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--normal dusk-icon-button-labeled"
          href="/some-base-path/setup/restore"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-anchor-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M13,3A9,9 0 0,0 4,12H1L4.89,15.89L4.96,16.03L9,12H6A7,7 0 0,1 13,5A7,7 0 0,1 20,12A7,7 0 0,1 13,19C11.07,19 9.32,18.21 8.06,16.94L6.64,18.36C8.27,20 10.5,21 13,21A9,9 0 0,0 22,12A9,9 0 0,0 13,3Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <span
            class="dusk-anchor-button__text"
          >
            Restore
          </span>
          
          
        </a>
        <!--&lt;Anchor&gt;-->
        <!--&lt;AnchorButton&gt;-->
        <!--&lt;AppAnchorButton&gt;-->
      </div>
    </div>
  </section>
   
  <footer
    class="landing-footer s-diEOsynXV9Ac"
  >
    <span
      class="s-diEOsynXV9Ac"
    >
      Web Wallet v
      0.1.5
       (
      hash1234 2024-01-12
      )
    </span>
  </footer>
  <!--&lt;+page&gt;-->
</div>
`;
